--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,7 @@ oauth2client==4.1.3
 google-auth==2.28.2
 google-auth-oauthlib==1.2.0
 google-auth-httplib2==0.2.0
-google-api-python-client==2.122.0 
+google-api-python-client==2.122.0
+urllib3>=2.0.7
+pyOpenSSL>=23.0.0
+certifi>=2024.2.2 
